# idcinternals

./: CMakeLists.txt  LICENSE  Makefile  Makefile.osx  Makefile.w32  README.md  dumper.cpp  dumper.h  pluginreg.cpp
cmake_find/: Findidasdk.cmake
